Some refactor to keep namespaces seperate between Cs and Fs project. Some minor work to get fs to read from file and not just test strings

--- a/EasyTabs.Parser/EasyTabs.Parser.fsproj
+++ b/EasyTabs.Parser/EasyTabs.Parser.fsproj
@@ -5,7 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Either.fs" />
     <Compile Include="Library.fs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="FParsec" Version="1.1.1" />
   </ItemGroup>
 
 </Project>
