--- a/EasyTabs/Properties/launchSettings.json
+++ b/EasyTabs/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "EasyTabs": {
       "commandName": "Project",
-      "commandLineArgs": "E:\\repos\\EasyTabs\\newSong1.et"
+      "commandLineArgs": "C:\\Users\\PC\\Documents\\guitar\\isnt_shee_lovely.et"
     }
   }
 }
