--- a/EasyTabs/EasyTabs.csproj
+++ b/EasyTabs/EasyTabs.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\EasyTabs.Logic\EasyTabs.Logic.csproj" />
+    <ProjectReference Include="..\EasyTabs.Parser\EasyTabs.Parser.fsproj" />
   </ItemGroup>
 
 </Project>
